--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Energy Efficient Location</h3>
 							<div class="iconbox-desc">
-								Node JS, Spring Boot, Jasper Report, Web API
+								G-sensor, Approximity sensor, RSS, Wifi, trilateration
 							</div>
 						</div>
 					</div>
