--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                             <img src="assets/images/item-3.jpg" alt="img01"/>
                             <figcaption>
                                 <h2>Academic <span>Research</span></h2>
-                                <p><a href="http://dspace.ewubd.edu/handle/123456789/2598" class="btn btn-info">Explore Now</a></p>
+                                <p><a href="http://dspace.ewubd.edu:8080/handle/123456789/2598" class="btn btn-info">Explore Now</a></p>
                             </figcaption>
                         </figure>
                     </div>
