job position update

--- a/index.html
+++ b/index.html
@@ -659,6 +659,7 @@
 						<div class="pfblock-subtitle">
 							Amit Hasan<br/>
 							Former Software Engineer at SATCOM IT LTD.<br/>
+							System Engineer at ADInteractive, sapporo, hokkaido, Japan.<br/>
 							B.SC in CSE at East West University Bangladesh <br/>
 							Email: amithasan.ewubd@gmail.com<br/>
 							Cell: +8108018904779
